# data-science-webapp-steganography

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env  .env_development  .env_production  backend.dockerfile  docker-entrypoint.sh  start-reload.sh  start.sh
backend/app/: prestart.sh  pyproject.toml
backend/app/app/api/api_v1/endpoints/: items.py
backend/app/app/core/: config.py
backend/app/app/notebooks/: Python3_8.ipynb  Setup.ipynb  Stegano_LSB.ipynb  Workstation.ipynb
backend/app/app/schemas/: item.py
frontend/: main.py  pyproject.toml  requirements.txt
frontend/apps/: analysis.py  home.py  how_it_works.py  toc.py
scripts/: test.sh
