[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Sébastien Mascha <smascha@juniorisep.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.76.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
