[tool.poetry]
name = "app"
version = "0.1.0"
description = "Python with Uvicorn and Gunicorn"
authors = ["Sebastien Mascha <sebastien.mascha@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
pydantic = "^1.8.1"
gunicorn = "^20.1.0"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
tensorflow = "^2.4.1"
jupyterlab = "^3.0.12"
numpy = ">=1.19.2,<1.20.0"
matplotlib = "^3.4.1"
scipy = "^1.6.2"
pandas = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"